// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description should render Description component with props = (genres: "genres", title: "title", voteAverage: 10, runtime: [1, 1]) 1`] = `
<div
  className="description"
>
  <h2
    className="title"
  >
    title
  </h2>
  <div
    className="specification"
  >
    <span
      className="genre"
    >
      genres
    </span>
    <div
      className="border"
    />
    <div
      className="duration"
    >
      <span>
        1h 1m
      </span>
    </div>
  </div>
  <Rating
    voteAverage={10}
  />
</div>
`;

exports[`Description should render Description component without props 1`] = `
<div
  className="description"
>
  <h2
    className="title"
  />
  <div
    className="specification"
  >
    <span
      className="genre"
    />
    <div
      className="border"
    />
    <div
      className="duration"
    >
      <span>
        0h 0m
      </span>
    </div>
  </div>
  <Rating
    voteAverage={0}
  />
</div>
`;
